--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,6 +68,12 @@
 
     --radius: 0.5rem;
   }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 @layer base {
