--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,13 +19,14 @@
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
 
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 243 75% 59%;
+    --primary-foreground: 210 20% 98%;
+    --primary-button: 226 84% 67%;
 
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
 
-    --accent: 240 4.8% 95.9%;
+    --accent: 0 0 100%;;
     --accent-foreground: 240 5.9% 10%;
 
     --destructive: 0 84.2% 60.2%;
@@ -37,7 +38,7 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 221 39% 11%;
     --foreground: 0 0% 98%;
 
     --muted: 240 3.7% 15.9%;
@@ -46,19 +47,21 @@
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
 
-    --card: 240 10% 3.9%;
+    --card: 219 37% 12%;
     --card-foreground: 0 0% 98%;
 
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
 
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
+    --primary: 226 84% 67%;
+    --primary-foreground: 215 28% 17%;
+    --primary-button: 226 84% 67%;
+ 
 
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
 
-    --accent: 240 3.7% 15.9%;
+    --accent: 219 40% 10%;
     --accent-foreground: 0 0% 98%;
 
     --destructive: 0 62.8% 30.6%;
