--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --foreground: 0 0% 100;
 
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
@@ -13,21 +13,21 @@
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
 
-    --card: 0 0% 100%;
+    --card: 210, 40%, 98%;
     --card-foreground: 240 10% 3.9%;
 
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
 
-    --primary: 243 75% 59%;
-    --primary-foreground: 210 20% 98%;
-    --primary-button: 226 84% 67%;
-
+    --primary: 215, 90%, 47%;
+    --primary-foreground: 215, 100%, 96%;
+   
+ 
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
 
     --accent: 0 0 100%;;
-    --accent-foreground: 240 5.9% 10%;
+    --accent-foreground: 218, 54%, 20%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -55,9 +55,8 @@
 
     --primary: 226 84% 67%;
     --primary-foreground: 215 28% 17%;
-    --primary-button: 226 84% 67%;
  
-
+    
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
 
