--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@
   .dark {
     --background: 224 71% 4%;
     --foreground: 213 31% 91%;
+    --action: 195, 100%, 19%, 1;
 
     --muted: 223 47% 11%;
     --muted-foreground: 215.4 16.3% 56.9%;
@@ -57,9 +58,11 @@
 
     --primary: 216 47% 74%;
     --primary-foreground: 220 39% 24%;
+    --primary-action: 220 200% 100%;
 
     --secondary: 222.2 47.4% 11.2%;
     --secondary-foreground: 210 40% 98%;
+    --secondary-action: 210 200% 100%;
 
     --destructive: 0 63% 31%;
     --destructive-foreground: 210 40% 98%;
@@ -74,6 +77,7 @@
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
